2012-06-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_add_raw_audio_data):
	double capacity when it's too low

	* avtvorbis.c (load_vorbis): detect needed capacity

2012-06-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_load_pcm, avt_load_wave, avt_load_au)
	(avt_load_audio_rw): rewritten

	* akfavatar.h, avatar-audio.c (avt_set_raw_audio_capacity):
	new function

2012-05-27  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (fill_audio, avt_stop_audio, avt_quit_audio)
	(avt_play_audio): make soundpos an offset instead of a pointer

	* avatar-audio.c (avt_add_raw_audio_data):
	allow adding data while playing

	* avtvorbis.c: parameters for playing while loading

	* lua/lua-avt.c: parameters for playing while|after loading
	lua/akfavatar-vorbis.c: adapted

	* akfavatar.h, avatar-audio.c (avt_play_audio):
	playmode parameter instead of doloop
	lua/lua-avt.c: adapted

	* akfavatar.h, avatar-audio.c (avt_load_audio_file)
	(avt_load_audio_part, avt_load_audio_stream, avt_load_audio_data):
	preliminary support for playmode
	lua/lua-avt.c, lua/akfavatar-vorbis.c: adapted

	* avtaddons.h, avtvorbis.c: support for playmode

	* pascal/akfavatar.pas: support for playmode

2012-05-21  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_set_balloon_color, lavt_set_background_color)
	(lavt_set_text_color, lavt_set_text_background_color):
	accept color numbers

2012-05-08  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (initialize, reset, start_screen):
	no avatar image for the filechooser

2012-05-07  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (check_options, main):
	make parameter --dir really only for file-selector

	* lua-akfavatar.sh: use --dir parameter

	* lua/lua-akfavatar-prg.c (find_scripts): new function

2012-05-06  Andreas K. Foerster  <info@akfoerster.de>

	* bdf2font:
        use a variable for the prefix instead of the name